# xmltopdf

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENCE  LICENSE  MANIFEST.in  README.md  SECURITY.md  ejemplo_rapido.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  tests.yml
examples/: basic_usage.py  batch_processing.py  custom_template.py
src/cfdi_pdf/: __init__.py  api.py  cli.py  exceptions.py
src/cfdi_pdf/models/: __init__.py  cfdi.py  concepto.py  emisor.py  impuestos.py  pagos.py  receptor.py  timbre.py
src/cfdi_pdf/parser/: __init__.py  sanitizer.py  xml_parser.py
src/cfdi_pdf/qr/: __init__.py  generator.py
src/cfdi_pdf/render/: __init__.py  engine.py  template.py
src/cfdi_pdf/sat/: __init__.py  catalogs.py  helpers.py
src/cfdi_pdf/templates/clasico/: styles.css  template.html
src/cfdi_pdf/templates/corporativo/: styles.css  template.html
src/cfdi_pdf/templates/minimal/: styles.css  template.html
src/cfdi_pdf/utils/: __init__.py  formatters.py
tests/: __init__.py  conftest.py  test_api.py  test_catalogs.py  test_formatters.py  test_pagos.py  test_parser.py  test_qr.py  test_sanitizer.py  test_templates_nuevos.py
tests/fixtures/: pagos20_multiple.xml  pagos20_retenciones.xml  sample_cfdi.xml
