[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfdi-pdf"
version = "0.1.2"
description = "Professional CFDI 4.0 XML to PDF converter for Mexico SAT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "CFDI PDF Contributors" }
]
keywords = [
    "cfdi",
    "sat",
    "mexico",
    "pdf",
    "xml",
    "factura",
    "facturacion",
    "fiscal",
    "invoice",
    "cfdi4.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "Jinja2>=3.1.0",
    "WeasyPrint>=60.0",
    "qrcode[pil]>=7.4",
    "Pillow>=10.0.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "lxml-stubs>=0.5.0",
    "types-Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/jesusmrv81/xmltopdf"
Documentation = "https://github.com/jesusmrv81/xmltopdf#readme"
Repository = "https://github.com/jesusmrv81/xmltopdf"
Issues = "https://github.com/jesusmrv81/xmltopdf/issues"
Changelog = "https://github.com/jesusmrv81/xmltopdf/blob/main/CHANGELOG.md"

[project.scripts]
cfdi-pdf = "cfdi_pdf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cfdi_pdf"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=cfdi_pdf",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["cfdi_pdf"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["cfdi_pdf"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["weasyprint.*", "qrcode.*"]
ignore_missing_imports = true
